//package wanyou.game.protocol;
//ÒÆ¶¯Í£Ö¹
message BseRoleMove {
    required string sessionId = 1;
    required int32 x = 4;
    required int32 y = 5;
}
